# Roman-Calculator

./: .coverage  Checklist.txt  ErrorHandling.py  NoOperator.py  README.md  RomanNumeralValue.py  ValidInputCheck.py  inttoroman.py  main.py  mathfunction.py  mathfunctions.py  pyproject.toml  romantoint.py  stringManipulation.py
src/Roman_Calculator/: ErrorHandling.py  inttoroman.py  invalidRomanSubtraction.py  main.py  mathfunctions.py  romantoint.py  stringManipulation.py
tests/: test_ErrorHandling.py  test_inttoroman.py  test_invalidRomanSubtraction.py  test_main.py  test_mathfunctions.py  test_romantoint.py  test_stringManipulation.py
