[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roman_numeral_calc"
version = "1.0"
description = "A calculator for Roman numerals"
authors = [
    { name = "hunter Smith", email = "huntertsmith4778@gmail.com" } 
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.0"

[project.scripts]
calculator = "Roman_numeral_calc.calculator:main"

[project.optional-dependencies]
dev = ["pytest==8.3.2", "pytest-cov==5.0.0"]



[project.urls]
Repository = "https://github.com/RaiiDeNx7/Roman-Calculator"