[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Roman_Calculator"
version = "1.0"
description = "A calculator for Roman numerals"
authors = [
    { name = "Hunter Smith", email = "huntertsmith4778@gmail.com" } 
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.0"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-cov==5.0.0"]

[project.urls]
Repository = "https://github.com/RaiiDeNx7/Roman-Calculator"